# discord

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  actions_deploy  bot.py  bot_prototype.py  compose.yaml  configuration.yaml  livestreams.toml  pretix_connector.py  prod-config.toml  pyproject.toml  test-config.toml  test-livestreams.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  debug.yml  deploy.yml  deploy_pydata.yml
DiscordBot/: configuration.py
DiscordBot/cogs/: registration.py
DiscordBot/extensions/: __init__.py
DiscordBot/extensions/organisers/: organisers.py
DiscordBot/helpers/: tito_connector.py
EuroPythonBot/: bot.py  config.local.toml  config.toml  config.toml.sample  configuration.py  error.py  staging-config.toml  ticket_to_roles_prod.json  ticket_to_roles_staging.json
EuroPythonBot/cogs/: ping.py  registration.py  registration_pydata.py
EuroPythonBot/extensions/: __init__.py
EuroPythonBot/extensions/job_board/: Job Posts 2024 (Antworten) - Formularantworten 2.csv  __init__.py  jobs.csv
EuroPythonBot/extensions/organisers/: __init__.py  organisers.py  roles.py
EuroPythonBot/extensions/programme_notifications/: __init__.py  cog.py  configuration.py  exceptions.py
EuroPythonBot/helpers/: channel_logging.py  logging.py  pretix_api_response_models.py  pretix_connector.py  tito_connector.py
EuroPythonBot/program_notifications/: cog.py  livestream_connector.py  models.py  program_connector.py  session_to_embed.py
EuroPythonBot/registration/: cog.py  pretix_api_response_models.py  pretix_connector.py  registration_logger.py  ticket.py
PyConESBot/: bot.py  config.toml
PyConESBot/extensions/organisers/: __init__.py  roles.py
PyConESBot/program_notifications/: cog.py  livestream_connector.py  models.py  program_connector.py  session_to_embed.py
PyConESBot/registration/: cog.py  pretix_connector.py
ansible/: .secrets.j2  debug-deploy.yml  deploy-playbook.yml  docker-compose.yml  inventory.ini
cached/: schedule.json
cogs/: ping.py
discord_bot/: __init__.py  bot.py  conference_setup.py  config.toml  configuration.py  error.py
discord_bot/cogs/: __init__.py  ping.py  registration.py  registration_pydata.py
discord_bot/extensions/admin/: __init__.py  admin.py  roles.py
discord_bot/extensions/job_board/: __init__.py  jobs.csv
discord_bot/extensions/organisers/: __init__.py  organisers.py
discord_bot/extensions/programme_notifications/: __init__.py  cog.py  configuration.py
discord_bot/helpers/: __init__.py  channel_logging.py  ticket_connector.py  tito_connector.py
discord_bots/: README.md  discord_jobs_bot.py  discord_registration_bot.py  discord_registration_bot_config.yaml  job_urls.csv  requirements.txt  update_ticket_api.py
discord_bots/db/: read_db.py  reset_db.py  setup_db.py
docs/: discord-server-bot-setup.md  discord-server-configuration.md  pretix-client-setup.md
scripts/: configure-guild.py  export-members.py  pretix-mock.py
src/: bot_prototype.py  main.py  model.py  pretix_connector.py  question_handling.py  settings.py
src/EuroPythonBot/: bot.py  configuration.py
src/EuroPythonBot/program_notifications/: cog.py  livestream_connector.py  models.py  program_connector.py  session_to_embed.py
src/EuroPythonBot/registration/: cog.py  pretix_api_response_models.py  pretix_connector.py  registration_logger.py
src/europython_discord/: bot.py  config.toml  configuration.py  staging-config.toml
src/europython_discord/animals/: clients.py  cog.py  config.py  rate_limiter.py
src/europython_discord/cat/: __init__.py  catclient.py  cog.py  config.py
src/europython_discord/cogs/: activity.py  guild_statistics.py  ping.py
src/europython_discord/dog/: cog.py  config.py  dogclient.py
src/europython_discord/duck/: __init__.py  cog.py  config.py  duckclient.py
src/pycones_discord_bot/: __init__.py
tests/: __init__.py  mock_pretix_checkinglists_list_positions.json  mock_pretix_items.json  mock_pretix_orders.json  test_pretix_connector.py
tests/animals/: test_clients.py  test_cog.py
tests/cat/: test_cat.py
tests/dog/: test_cog.py
tests/duck/: test_duck.py
tests/fox/: test_fox.py
tests/program_notifications/: mock_schedule.json  test_program_connector.py  test_session_to_embed.py
tests/programme_notifications/: __init__.py  conftest.py  factories.py
tests/registration/: mock_pretix_items.json  mock_pretix_orders.json  test_pretix_connector.py  test_registration_logger.py  test_ticket.py
(+84 files in other folders)
