[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "europython-discord"
version = "0.1.0"
description = "All Discord-related things for the EuroPython conference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.3.1",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.16",
    "arrow>=1.3.0",
    "attrs>=25.3.0",
    "cattrs>=23.1.2",
    "certifi>=2024.7.4",
    "python-dotenv>=1.0.1",
    "yarl>=1.19.0",
    "pydantic>=2.8.2",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "ansible>=10.2.0",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
run-bot = "EuroPythonBot.bot:main"

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
